Upgrade antd version and fix broken styles

--- a/nextgisweb/feature_layer/nodepkg/feature-editor-modal/FeatureEditorModal.less
+++ b/nextgisweb/feature_layer/nodepkg/feature-editor-modal/FeatureEditorModal.less
@@ -12,4 +12,8 @@
             height: 100%;
         }
     }
+
+    > div + div {
+        height: 100%;
+    }
 }
